<resources>
    <string name="app_name">Zakupoholik</string>
    <string name="title_activity_login">Zaloguj się</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_register">Zarejestruj się</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="error_invalid_email">Niepoprawny mail</string>
    <string name="error_invalid_password">Zbyt krótkie hasło</string>
    <string name="error_incorrect_password">Niepoprawne hasło</string>
    <string name="error_field_required">Pole wymagane</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to register -->
    <string name="name">Imię</string>
    <string name="login">Login</string>
    <string name="passwd">Hasło</string>
    <string name="email">Email</string>

    <!-- Strings related to lists -->
    <string name="no_lists_message">
        Nie masz żadnych list
    </string>
    <string name="action_logout_title">Wyloguj się</string>

    <!-- Strings related to creating new list in dialog-->
    <string name="add_list_title">Nowa lista</string>
    <string name="add_list_name_hint">Nazwa listy</string>
    <string name="add_list_data_hint">Data zakupów</string>
    <string name="add_list_positive_button">Dodaj liste</string>
    <string name="add_list_negative_button">Anuluj</string>
    <string name="add_list_date_button">Wybierz datę</string>

    <!-- Strings related to renaming list in dialog-->
    <string name="rename_list_title">Zmień nazwę listy</string>
    <string name="rename_list_ok_button">Zmień nazwę</string>
    <string name="rename_list_cancel_button">Anuluj</string>

    <!-- Strings related to products -->
    <string name="no_products_message">
        Nie masz żadnych produktow
    </string>

    <!-- Strings related to adding new product in dialog-->
    <string name="product_name_hint">Nazwa produktu</string>
    <string name="product_number_hint">Ilość</string>
    <string name="product_unit_default">szt</string>
    <string-array name="units">
        <item>szt</item>
        <item>l</item>
        <item>ml</item>
        <item>kg</item>
        <item>dag</item>
    </string-array>

    <!-- Strings related to renaming product in dialog-->
    <string name="rename_product_ok_button">Zmień</string>
    <string name="rename_product_cancel_button">Anuluj</string>

    <!-- Strings related to choose shop in dialog-->
    <string name="choose_shop_hint">Wpisz nazwę sklepu</string>
    <string name="choose_shop_title">Wybierz sklep</string>
    <string name="choose_shop_ok_button">OK</string>
    <string name="choose_shop_address_hint">Wpisz adres (np. Lublin, Kowalska 1)</string>

    <string name="default_shop">-</string>

    <!-- Strings related to add new product to mysql-->
    <string name="add_new_product_text">Wygląda na to, że jeszcze nie mamy tego produktu w bazie. Dodaje do bazy:</string>
    <string name="add_new_product_choose_category">Wybierz kategorię:</string>

    <!-- Strings related to remove  list dialog-->
    <string name="dialog_remove_list_text">Czy na pewno chcesz usunąć listę?</string>
    <string name="dialog_remove_list_title">Usuń listę</string>
    <string name="dialog_remove_list_button">Usuń</string>
    <string name="dialog_remove_list_cancel_button">Anuluj</string>

    <!-- Strings related to remove  list dialog-->
    <string name="dialog_remove_product_text">Czy na pewno chcesz usunąć produkt?</string>
    <string name="dialog_remove_product_title">Usuń produkt</string>


    <!-- Strings related to MapActivity-->
    <string name="map_button_find_shops_near_me">Znajdź najbliższe sklepy</string>
</resources>
