<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#ddd">

    <!-- register progress -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/image_shopping"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/shopping"
        android:scaleType="centerCrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_imie"
            android:hint="@string/name"
            android:textColor="@color/colorAccentDark"
            android:textSize="26sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_login"
            android:hint="@string/login"
            android:textColor="@color/colorAccentDark"
            android:textSize="26sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_haslo"
            android:hint="@string/passwd"
            android:textColor="@color/colorAccentDark"
            android:textSize="26sp"
            android:inputType="textPassword"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            android:hint="@string/email"
            android:textColor="@color/colorAccentDark"
            android:textSize="26sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_register"
            android:text="@string/action_register"
            android:textSize="22sp"
            android:textColor="@color/colorAccentDark"
            android:background="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

    </ScrollView>

</LinearLayout>
