<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccentLight">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/image_shopping"
        android:layout_height="150dp"
        android:src="@drawable/shopping"
        android:scaleType="centerCrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/et_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_login"
                android:textColor="@color/colorAccentDark"
                android:textSize="26sp"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:textColor="@color/colorAccentDark"
                android:textColorHint="@color/colorAccentDark"
                android:textSize="26sp"
                android:inputType="textPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textSize="22sp"
            android:textColor="@color/colorAccentDark"
            android:background="@color/colorPrimary"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccentDark"
            android:id="@+id/button_register"
            android:text="@string/action_register"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:layout_marginTop="16dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
